--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">Certificates</a></li>
+
                     <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
@@ -87,9 +87,9 @@
                 <div class="about__data bd-grid">
                     <p class="about__description">
                         <span>Hi! I'm John Rey Malulan <br> </span>
-                        I live in Pasig City, I'm 23 years old.
-                        I am new to Web Development but i am very enthusiastic about it. I love designing and developing
-                        websites. I'm currently looking for a job where i can utilize and enhance my skills and
+                        I live in Pasig City.
+                        I am new to Web Development but I am very enthusiastic about it. I love designing and developing
+                        websites. I'm currently looking for a job where I can utilize and enhance my skills and
                         knowledge to help
                         contribute to the company growth.
 
@@ -167,38 +167,7 @@
 
         </section>
 
-        <!-- ===== SERVICES ===== -->
-        <section class="services section bd-container" id="services">
-            <span class="section-subtitle"></span>
-            <h2 class="section-title">Diploma and Certificates</h2>
 
-            <div class="services__container bd-grid">
-                <div class="services__data">
-                    <i class="bx bxs-graduation services__icon"></i>
-                    <h3 class="services__title">Bachelors Degree In IT Diploma</h3>
-                    <p class="services__description">Jose Rizal University Bachelor's Degree in Information Technology
-                    </p>
-                    <a href="https://drive.google.com/file/d/1XSGKLXHKeyy1P5o0UNsweSrgc0PPT7Qa/view?usp=sharing"
-                        class="button" target="_blank">View</a>
-                </div>
-
-                <div class="services__data">
-                    <i class="bx bx-laptop services__icon"></i>
-                    <h3 class="services__title">Responsive Web Design Certicate</h3>
-                    <p class="services__description">Free Code Camp Approx. 300 Hours of Course Work</p>
-                    <a href="https://www.freecodecamp.org/certification/johnreymalulan/responsive-web-design"
-                        class="button" target="_blank">View</a>
-                </div>
-
-                <div class="services__data">
-                    <i class="bx bxs-briefcase-alt services__icon"></i>
-                    <h3 class="services__title">SCRUM Foundation Certificate</h3>
-                    <p class="services__description">CertiProf Scrum Foundation Professional Certificate</p>
-                    <a href="https://www.youracclaim.com/badges/5668763e-020c-42ef-a0aa-1ca58ece58cd?source=linked_in_profile"
-                        class="button" target="_blank">View</a>
-                </div>
-            </div>
-        </section>
 
 
         <!-- ===== PORTFOLIO ===== -->
@@ -227,6 +196,20 @@
                 </div>
 
                 <div class="portfolio__content mix web">
+                    <a href="https://simple-tastyrestaurant.netlify.app/#" target="_blank"><img src="img/work4_4.jpg"
+                            alt="" class="portfolio__img"></a>
+                    <div class="porfolio__data">
+                        <span class="porfolio__subtitle">Web App</span>
+                        <a href="https://simplephp-crud-app.000webhostapp.com/login.php" target="_blank">
+                            <h2 class="portfolio__title">Single Page Restaurant with Dark Theme Mode</h2>
+                            <a href="https://simplephp-crud-app.000webhostapp.com/login.php" class="button button-link"
+                                target="_blank">View</a>
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="portfolio__content mix web">
                     <a href="https://simplephp-crud-app.000webhostapp.com/login.php" target="_blank"><img
                             src="img/work2_2.jpg" alt="" class="portfolio__img"></a>
                     <div class="porfolio__data">
@@ -246,7 +229,7 @@
                         <span class="porfolio__subtitle">Mobile App</span>
                         <a href="https://drive.google.com/file/d/1H5TpXQdZpmM5F-aWAFwvTfQAqnjlYOgJ/view?usp=sharing"
                             target="_blank">
-                            <h2 class="portfolio__title">Dengue Surveilance and Reporting App</h2>
+                            <h2 class="portfolio__title">Dengue Surveillance and Reporting App</h2>
                             <a href="https://drive.google.com/file/d/1H5TpXQdZpmM5F-aWAFwvTfQAqnjlYOgJ/view?usp=sharing"
                                 class="button button-link" target="_blank">View</a>
                         </a>
