--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <span class="home__greeting">Hello My Name is</span>
                     <h1 class="home__name">John Rey</h1>
                     <span class="home__profession">An Aspiring Web Developer</span>
-                    <a download="" href="pdf/CV_JOHNREY_MALULAN.pdf" class="button button-light home__button">Download
+                    <a download="" href="pdf/CV_JOHNREY_MALULAN_2021.pdf" class="button button-light home__button">Download
                         CV</a>
                 </div>
 
