compress images to load faster

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="home__img">
-                    <img src="img/home3.jpg" alt="">
+                    <img src="img/home3-min.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
 
-                <img src="img/about2.png" alt="" class="about__img">
+                <img src="img/about2-min.png" alt="" class="about__img">
 
 
             </div>
