--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <section class="home" id="home">
         <div class="home__container container grid">
           <div class="home__data">
-            <h1 class="home__name">John Rey</h1>
+            <h1 class="home__name">John Rey Malulan</h1>
             <span class="home__profession">Software Developer</span>
             <a
               download=""
@@ -106,7 +106,7 @@
               I'm a developer with years of experience in developing desktop and
               web applications. I'm constantly exploring new technologies and
               learning to stay updated in this ever-evolving field. Let's
-              collaborate to bring your ideas to life and make a lasting impact
+              collaborate to bring our ideas to life and make a lasting impact
               together!
             </p>
           </div>
@@ -215,10 +215,32 @@
             >All</span
           >
           <span class="portfolio__item" data-filter=".web">Web</span>
-          <span class="portfolio__item" data-filter=".app">App</span>
+          <span class="portfolio__item" data-filter=".app">Mobile</span>
         </div>
 
         <div class="portfolio__container grid">
+          <div class="portfolio__content mix web">
+            <a href="https://promptopia-nextjs.netlify.app/" target="_blank"
+              ><img src="img/work5.jpg" alt="" class="portfolio__img"
+            /></a>
+            <div class="porfolio__data">
+              <span class="porfolio__subtitle">Web App</span>
+              <a
+                href="https://simple-react-advice-api-app.netlify.app/"
+                target="_blank"
+              >
+                <h2 class="portfolio__title">
+                  Promptopia - NextJS Tailwind and MongoDB
+                </h2>
+                <a
+                  href="https://promptopia-nextjs.netlify.app/"
+                  class="button button-link"
+                  target="_blank"
+                  >View</a
+                >
+              </a>
+            </div>
+          </div>
           <div class="portfolio__content mix web">
             <a
               href="https://simple-react-advice-api-app.netlify.app/"
@@ -232,7 +254,7 @@
                 target="_blank"
               >
                 <h2 class="portfolio__title">
-                  Simple Advice API app with React and Axios
+                  Simple Advice API app - React and Axios
                 </h2>
                 <a
                   href="https://simple-react-advice-api-app.netlify.app/"
