Update section title and subtitle

--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
 
       <!-- ===== QUALIFICATIONS ===== -->
       <section class="qualification section container">
-        <h2 class="section-title">Qualification</h2>
-        <span class="section-subtitle">Experience and Education</span>
+        <h2 class="section-title">
+          Qualification <br /><span class="section-subtitle"
+            >Experience and Education</span
+          >
+        </h2>
+
         <div class="qualification__container grid">
           <!-- ===== WORK EXPERIENCE ===== -->
           <div class="qualification__content">
@@ -207,8 +211,11 @@
 
       <!-- ===== PORTFOLIO ===== -->
       <section class="portfolio section container" id="portfolio">
-        <h2 class="section-title">Porfolio</h2>
-        <span class="section-subtitle">Small and Simple Projects</span>
+        <h2 class="section-title">
+          Porfolio <br /><span class="section-subtitle"
+            >Small and Simple Projects</span
+          >
+        </h2>
 
         <div class="portfolio__nav">
           <span class="portfolio__item active-portfolio" data-filter="all"
