--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="home__profession">Software Developer</span>
             <a
               download=""
-              href="pdf/CV_JOHNREY_MALULAN_2021.pdf"
+              href="pdf/Malulan_JohnRey_CV.pdf"
               class="button button-light home__button"
               >Download CV</a
             >
@@ -240,7 +240,7 @@
                   Promptopia - NextJS Tailwind and MongoDB
                 </h2>
                 <a
-                  href="https://promptopia-nextjs.netlify.app/"
+                  href="https://promptopia-nextjs-neon.vercel.app/"
                   class="button button-link"
                   target="_blank"
                   >View</a
