--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
 
         <div class="portfolio__container grid">
           <div class="portfolio__content mix web">
-            <a href="https://promptopia-nextjs.netlify.app/" target="_blank"
+            <a href="https://promptopia-nextjs-neon.vercel.app/" target="_blank"
               ><img src="img/work5.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Web App</span>
               <a
-                href="https://simple-react-advice-api-app.netlify.app/"
+                href="https://promptopia-nextjs-neon.vercel.app/"
                 target="_blank"
               >
                 <h2 class="portfolio__title">
