Update nav active and add portfolio desc

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
     <!-- BOX ICONS -->
-    <link
+    <!-- <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    /> -->
+
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
 
@@ -236,9 +241,12 @@
                 href="https://promptopia-nextjs-neon.vercel.app/"
                 target="_blank"
               >
-                <h2 class="portfolio__title">
-                  Promptopia - NextJS Tailwind and MongoDB
-                </h2>
+                <h2 class="portfolio__title">Promptopia</h2>
+                <p class="portfolio__desc">
+                  Full-stack application built with NextJS, Tailwind, and
+                  MongoDB
+                </p>
+
                 <a
                   href="https://promptopia-nextjs-neon.vercel.app/"
                   class="button button-link"
@@ -260,9 +268,10 @@
                 href="https://simple-react-advice-api-app.netlify.app/"
                 target="_blank"
               >
-                <h2 class="portfolio__title">
-                  Simple Advice API app - React and Axios
-                </h2>
+                <h2 class="portfolio__title">Silly Advice</h2>
+                <p class="portfolio__desc">
+                  Simple Fetch API application built with React and Axios
+                </p>
                 <a
                   href="https://simple-react-advice-api-app.netlify.app/"
                   class="button button-link"
@@ -285,9 +294,10 @@
                 href="https://simplephp-crud-app.000webhostapp.com/login.php"
                 target="_blank"
               >
-                <h2 class="portfolio__title">
-                  Single Page Restaurant with Dark Theme Mode
-                </h2>
+                <h2 class="portfolio__title">Tasty Food</h2>
+                <p class="portfolio__desc">
+                  Single page application with Dark Theme Mode
+                </p>
                 <a
                   href="https://simplephp-crud-app.000webhostapp.com/login.php"
                   class="button button-link"
@@ -313,6 +323,9 @@
                 <h2 class="portfolio__title">
                   Dengue Surveillance and Reporting App
                 </h2>
+                <p class="portfolio__desc">
+                  Android application for reporting and mapping dengue cases.
+                </p>
                 <a
                   href="https://drive.google.com/file/d/1H5TpXQdZpmM5F-aWAFwvTfQAqnjlYOgJ/view?usp=sharing"
                   class="button button-link"
