--- a/index.html
+++ b/index.html
@@ -257,23 +257,19 @@
             </div>
           </div>
           <div class="portfolio__content mix web">
-            <a
-              href="https://simple-react-advice-api-app.netlify.app/"
-              target="_blank"
-              ><img src="img/work1_1.jpg" alt="" class="portfolio__img"
+            <a href="https://car-rental-nextjs.vercel.app/" target="_blank"
+              ><img src="img/work6.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Web App</span>
-              <a
-                href="https://simple-react-advice-api-app.netlify.app/"
-                target="_blank"
-              >
-                <h2 class="portfolio__title">Silly Advice</h2>
+              <a href="https://car-rental-nextjs.vercel.app/" target="_blank">
+                <h2 class="portfolio__title">CarHub</h2>
                 <p class="portfolio__desc">
-                  Simple Fetch API application built with React and Axios
+                  Cars API by API Ninjas built with NextJS, TypeScript, and
+                  Tailwind
                 </p>
                 <a
-                  href="https://simple-react-advice-api-app.netlify.app/"
+                  href="https://car-rental-nextjs.vercel.app/"
                   class="button button-link"
                   target="_blank"
                   >View</a
