Add threads project

--- a/index.html
+++ b/index.html
@@ -233,6 +233,27 @@
         <div class="portfolio__container grid">
           <div class="portfolio__content mix web">
             <a href="https://promptopia-nextjs-neon.vercel.app/" target="_blank"
+              ><img src="img/work7.jpg" alt="" class="portfolio__img"
+            /></a>
+            <div class="porfolio__data">
+              <span class="porfolio__subtitle">Web App</span>
+              <a href="https://threads-nextjs-eta.vercel.app/" target="_blank">
+                <h2 class="portfolio__title">Threads Clone</h2>
+                <p class="portfolio__desc">
+                  Full-stack app built with NextJS, TypeScript, shadcn, MongoDB
+                </p>
+
+                <a
+                  href="https://promptopia-nextjs-neon.vercel.app/"
+                  class="button button-link"
+                  target="_blank"
+                  >View</a
+                >
+              </a>
+            </div>
+          </div>
+          <div class="portfolio__content mix web">
+            <a href="https://promptopia-nextjs-neon.vercel.app/" target="_blank"
               ><img src="img/work5.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
