--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </p>
 
                 <a
-                  href="https://promptopia-nextjs-neon.vercel.app/"
+                  href="https://threads-nextjs-eta.vercel.app/"
                   class="button button-link"
                   target="_blank"
                   >View</a
