Update portfolio link

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         <div class="portfolio__container grid">
           <div class="portfolio__content mix web">
-            <a href="https://promptopia-nextjs-neon.vercel.app/" target="_blank"
+            <a href="https://threads-nextjs-eta.vercel.app/" target="_blank"
               ><img src="img/work7.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
