Update work experience

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <div class="grid">
               <div class="qualification__data">
-                <h3 class="qualification__area">Junior Software Developer</h3>
+                <h3 class="qualification__area">Software Developer</h3>
 
                 <div class="qualification__box">
                   <span class="qualification__work">
