Update file names, remove unused files, and add new project to portfolio

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
 
           <div class="home__img">
-            <img src="img/home3-min.jpg" alt="" />
+            <img src="img/hero-img.jpg" alt="" />
           </div>
         </div>
       </section>
@@ -233,7 +233,7 @@
         <div class="portfolio__container grid">
           <div class="portfolio__content mix web">
             <a href="https://threads-nextjs-eta.vercel.app/" target="_blank"
-              ><img src="img/work7.jpg" alt="" class="portfolio__img"
+              ><img src="img/threads-app.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Web App</span>
@@ -254,7 +254,7 @@
           </div>
           <div class="portfolio__content mix web">
             <a href="https://promptopia-nextjs-neon.vercel.app/" target="_blank"
-              ><img src="img/work5.jpg" alt="" class="portfolio__img"
+              ><img src="img/promptopia-app.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Web App</span>
@@ -279,7 +279,7 @@
           </div>
           <div class="portfolio__content mix web">
             <a href="https://car-rental-nextjs.vercel.app/" target="_blank"
-              ><img src="img/work6.jpg" alt="" class="portfolio__img"
+              ><img src="img/car-app.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Web App</span>
@@ -298,12 +298,37 @@
               </a>
             </div>
           </div>
+          <div class="portfolio__content mix web">
+            <a
+              href="https://travel-app-nextjs-blush.vercel.app/"
+              target="_blank"
+              ><img src="img/travel-app.jpg" alt="" class="portfolio__img"
+            /></a>
+            <div class="porfolio__data">
+              <span class="porfolio__subtitle">Web App</span>
+              <a
+                href="https://travel-app-nextjs-blush.vercel.app/"
+                target="_blank"
+              >
+                <h2 class="portfolio__title">Travel App</h2>
+                <p class="portfolio__desc">
+                  Simple Travel app with Next.js 14 and Tailwind CSS
+                </p>
+                <a
+                  href="https://travel-app-nextjs-blush.vercel.app/"
+                  class="button button-link"
+                  target="_blank"
+                  >View</a
+                >
+              </a>
+            </div>
+          </div>
 
           <div class="portfolio__content mix web">
             <a
               href="https://simple-tastyrestaurant.netlify.app/#"
               target="_blank"
-              ><img src="img/work4_4.jpg" alt="" class="portfolio__img"
+              ><img src="img/tasty-food.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Web App</span>
@@ -329,7 +354,7 @@
             <a
               href="https://drive.google.com/file/d/1H5TpXQdZpmM5F-aWAFwvTfQAqnjlYOgJ/view?usp=sharing"
               target="_blank"
-              ><img src="img/work3_3.jpg" alt="" class="portfolio__img"
+              ><img src="img/dengue-app.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Mobile App</span>
