Add devoverlow project

--- a/index.html
+++ b/index.html
@@ -79,17 +79,20 @@
 
           <div class="home__social">
             <a
+              href="https://www.linkedin.com/in/john-rey-malulan-6681a11b4/"
+              class="home__social-icon"
+              ><i class="bx bxl-linkedin-square"></i
+            ></a>
+            <a
+              href="https://github.com/johnnymaluls"
+              class="home__social-icon"
+              target="_blank"
+              ><i class="bx bxl-github"></i
+            ></a>
+            <a
               href="https://www.facebook.com/johnnymaluls/"
               class="home__social-icon"
               ><i class="bx bxl-facebook-square" target="_blank"></i
-            ></a>
-            <a
-              href="https://www.instagram.com/johnnymaluls/"
-              class="home__social-icon"
-              ><i class="bx bxl-instagram" target="_blank"></i
-            ></a>
-            <a href="#" class="home__social-icon" target="_blank"
-              ><i class="bx bxl-twitter"></i
             ></a>
           </div>
 
@@ -217,9 +220,7 @@
       <!-- ===== PORTFOLIO ===== -->
       <section class="portfolio section container" id="portfolio">
         <h2 class="section-title">
-          Porfolio <br /><span class="section-subtitle"
-            >Small and Simple Projects</span
-          >
+          Porfolio <br /><span class="section-subtitle">Personal Projects</span>
         </h2>
 
         <div class="portfolio__nav">
@@ -232,19 +233,24 @@
 
         <div class="portfolio__container grid">
           <div class="portfolio__content mix web">
-            <a href="https://threads-nextjs-eta.vercel.app/" target="_blank"
-              ><img src="img/threads-app.jpg" alt="" class="portfolio__img"
+            <a
+              href="https://dev-overflow-nextjs-git-main-johnnymaluls.vercel.app/"
+              target="_blank"
+              ><img src="img/dev-overflow.jpg" alt="" class="portfolio__img"
             /></a>
             <div class="porfolio__data">
               <span class="porfolio__subtitle">Web App</span>
-              <a href="https://threads-nextjs-eta.vercel.app/" target="_blank">
-                <h2 class="portfolio__title">Threads Clone</h2>
+              <a
+                href="https://dev-overflow-nextjs-git-main-johnnymaluls.vercel.app/"
+                target="_blank"
+              >
+                <h2 class="portfolio__title">DevOverflow</h2>
                 <p class="portfolio__desc">
                   Full-stack app built with NextJS, TypeScript, shadcn, MongoDB
                 </p>
 
                 <a
-                  href="https://threads-nextjs-eta.vercel.app/"
+                  href="https://dev-overflow-nextjs-git-main-johnnymaluls.vercel.app/"
                   class="button button-link"
                   target="_blank"
                   >View</a
